# sp1

./: .clangd  .gitignore  CMakeLists.txt  Cargo copy.toml  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.build  Makefile  README.md  clippy.toml  output.txt  pv_t_u32_wip.diff  report1.nsys-rep  rustfmt.toml
crates/air/: Cargo.toml
crates/air/src/: air_block.rs  lib.rs
crates/baby-bear/: Cargo.toml
crates/baby-bear/src/: baby_bear_poseidon2.rs  config.rs  dft.rs  lib.rs  poseidon2.rs
crates/basefold/: Cargo.toml
crates/basefold-prover/: Cargo.toml
crates/basefold-prover/scripts/: benchmark_jagged_basefold.rs  benchmark_stacked_basefold.rs
crates/basefold-prover/src/: configs.rs  encoder.rs  fold.rs  fri.rs  lib.rs  poseidon2.rs  pow.rs  prover.rs
crates/basefold/src/: code.rs  config.rs  encoder.rs  fri.rs  grinding_challenger.rs  lib.rs  pow.rs  prover.rs  types.rs  verifier.rs
crates/challenger/: Cargo.toml
crates/challenger/src/: duplex.rs  grinding_challenger.rs  lib.rs  multi_field.rs
crates/commit/: Cargo.toml
crates/commit/src/: commit.rs  lib.rs  tensor_cs.rs
crates/cuda/: Cargo.toml
crates/cuda/src/: api.rs  buffer.rs  client.rs  codeword.rs  device.rs  error.rs  global.rs  lib.rs  pinned.rs  scan.rs  server.rs  stream.rs  task.rs  tracegen.rs
crates/cuda/src/interleave/: fixed_rate.rs  mod.rs
crates/cuda/src/logup_gkr/: circuit_layer.rs  mod.rs  sum.rs  tracegen.rs
crates/cuda/src/mle/: base.rs  eval.rs  fold.rs  mod.rs  padded.rs  restrict.rs
crates/cuda/src/sumcheck/: hadamard.rs  mod.rs
crates/cuda/src/sync/: mod.rs  mpsc.rs
crates/cuda/src/tensor/: dot.rs  mod.rs  reduce.rs  sum.rs  transpose.rs
crates/cuda/src/zerocheck/: fix_last_variable.rs  mod.rs  sum_as_poly.rs
crates/cuslop/: Cargo.toml
crates/cuslop/src/: main.rs  server.rs
crates/device/: Cargo.toml
crates/device/src/: buffer.rs  lib.rs  mem.rs  slice.rs  tensor.rs
crates/device/src/cuda/: buffer.rs  dot.rs  error.rs  event.rs  global.rs  mod.rs  reduce.rs  stream.rs  task.rs  tensor.rs  transpose.rs
crates/device/src/host/: buffer.rs  mod.rs  tensor.rs
crates/device/src/tensor/: dot.rs  mod.rs  sum.rs  transpose.rs
crates/device/tests/: add_kernel.rs
crates/dft/: Cargo.toml
crates/dft/src/: lib.rs  sppark.rs
crates/experimental/: Cargo.toml
crates/experimental/src/: look_ahead.rs  reduce.rs  sum.rs  zerocheck_mock.rs
crates/futures/: Cargo.toml
crates/futures/src/: handle.rs  lib.rs  queue.rs  rayon.rs
crates/jagged/: Cargo.toml
crates/jagged/src/: basefold.rs  batch_eval_poly.rs  branching_program.rs  config.rs  hadamard.rs  jagged_eval.rs  lib.rs  long.rs  pcs.rs  poly.rs  populate.rs  prover.rs  sumcheck.rs  sumcheck_sum_as_poly.rs  verifier.rs  virtual_poly.rs
crates/jagged/src/cuda/: mod.rs  populate.rs
crates/jagged/src/jagged_eval/: jagged_assist.rs  mod.rs  sumcheck_eval.rs  sumcheck_poly.rs  sumcheck_sum_as_poly.rs  trivial_eval.rs
crates/logup-gkr/: Cargo.toml
crates/logup-gkr/src/: circuit.rs  components.rs  execution.rs  interactions.rs  lib.rs  round.rs
crates/machine/: Cargo.toml
crates/machine/programs/fibonacci-small/: fibonacci-program-tests
crates/machine/src/: basefold.rs  components.rs  gkr.rs  lib.rs  opts.rs
crates/merkle-tree/: Cargo.toml
crates/merkle-tree/src/: baby_bear_poseidon2.rs  bn254fr_poseidon2.rs  hasher.rs  lib.rs  p3.rs  single_layer.rs  tcs.rs
crates/mle/: Cargo.toml
crates/mle/src/: lib.rs  mle.rs  point.rs
crates/mle/src/backend/: mod.rs
crates/multi-pcs/: Cargo.toml
crates/multi-pcs/src/: lib.rs
crates/multilinear/: Cargo.toml
crates/multilinear/src/: backend.rs  eval.rs  fold.rs  lagrange.rs  lib.rs  mle.rs  padded.rs  pcs.rs  point.rs  restrict.rs  stacked.rs  virtual_geq.rs
crates/multivariate-adapter/: Cargo.toml
crates/multivariate-adapter/src/: air_types.rs  folder.rs  lib.rs  prover.rs  types.rs  verifier.rs
crates/perf/: Cargo.toml  run_executor.sh  workflow_prove.sh
crates/perf/src/: components.rs  executor.rs  lib.rs  main.rs
crates/prover/: Cargo.toml  compress_shape.json
crates/prover-clean/: Cargo.toml  layer_workloads.json
crates/prover-clean/basefold/: Cargo.toml
crates/prover-clean/basefold/src/: encoder.rs  fri.rs
crates/prover-clean/commit/: Cargo.toml
crates/prover-clean/commit/src/: commit.rs  encoder.rs  (+1 more)
crates/prover-clean/experimental/: Cargo.toml
crates/prover-clean/jagged_sumcheck/: Cargo.toml
crates/prover-clean/logup_gkr/: Cargo.toml
crates/prover-clean/merkle_tree/: Cargo.toml
crates/prover-clean/prover/: Cargo.toml
crates/prover-clean/src/: commit.rs  config.rs  encoder.rs  hadamard_sumcheck.rs  jagged.rs  lib.rs  look_ahead.rs  prover.rs  test_utils.rs  zerocheck.rs  zerocheck_mock.rs
crates/prover-clean/tracegen/: Cargo.toml
crates/prover-clean/utils/: Cargo.toml
crates/prover-clean/zerocheck/: Cargo.toml
crates/prover/scripts/: build_recursion_vks.rs  fibonacci_groth16.rs  fibonacci_sweep.rs  find_maximal_shapes.rs  find_oom_shapes.rs  find_recursion_shape.rs  find_recursion_shapes.rs  tendermint_sweep.rs  test_shape_fixing.rs
crates/prover/src/: basefold.rs  build.rs  builder.rs  components.rs  core.rs  error.rs  lib.rs  local.rs  recursion.rs  shapes.rs  types.rs  utils.rs  verify.rs
crates/prover_components/: Cargo.toml
crates/prover_components/src/: builder.rs  components.rs  lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: client.rs  lib.rs  mock.rs  proof.rs  prover.rs  utils.rs
crates/shard_prover/: Cargo.toml
crates/shard_prover/src/: lib.rs  machine.rs  prover.rs  setup.rs  types.rs
crates/sumcheck/: Cargo.toml
crates/sumcheck-prover/: Cargo.toml
crates/sumcheck-prover/src/: lib.rs
crates/sumcheck/src/: backend.rs  hadamard.rs  lib.rs  mle.rs  poly.rs  prover.rs  types.rs  verifier.rs
crates/sys/: CMakeLists.txt  Cargo.toml  build.rs
crates/sys/src/: algebra.rs  basefold.rs  challenger.rs  dft.rs  jagged.rs  lib.rs  logup_gkr.rs  merkle_tree.rs  mle.rs  poseidon2.rs  prover_clean.rs  reduce.rs  runtime.rs  sumcheck.rs  tracegen.rs  transpose.rs  zerocheck.rs
(+1275 files in other folders)
