[workspace.package]
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/succinctlabs/spl.git"
keywords = ["spl", "succinct", "zero-knowledge"]
categories = ["cryptography"]

[workspace.lints.clippy]
missing_docs = "warn"

[workspace]
members = [
    "crates/air",
    "crates/basefold",
    "crates/challenger",
    "crates/cuda",
    "crates/sys",
    "crates/dft",
    "crates/merkle-tree",
    "crates/jagged",
    "crates/zerocheck",
    "crates/prover",
    "crates/tracing",
    "crates/perf",
    "crates/tracegen",
    "crates/logup-gkr",
    "crates/cuslop",
    "crates/prover-clean",
]
resolver = "2"

[profile.dev]
opt-level = 3
debug = false

[profile.lto]
inherits = "release"
lto = "thin"
incremental = true

[profile.release]
lto = true

[workspace.dependencies]
# cuslop
csl-sys = { path = "crates/sys" }
csl-cuda = { path = "crates/cuda" }
csl-dft = { path = "crates/dft" }
csl-merkle-tree = { path = "crates/merkle-tree" }
csl-basefold = { path = "crates/basefold" }
csl-challenger = { path = "crates/challenger" }
csl-jagged = { path = "crates/jagged" }
csl-air = { path = "crates/air" }
csl-zerocheck = { path = "crates/zerocheck" }
csl-tracing = { path = "crates/tracing" }
csl-prover = { path = "crates/prover" }
csl-tracegen = { path = "crates/tracegen" }
csl-logup-gkr = { path = "crates/logup-gkr" }
csl-prover-clean = { path = "crates/prover-clean" }
csl-server = { path = "crates/cuslop" }
csl-perf = { path = "crates/perf" }

# slop 
slop-air = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-koala-bear = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-bn254 = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-basefold = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-basefold-prover = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-dft = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-matrix = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-algebra = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-symmetric = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-merkle-tree = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-poseidon2 = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-commit = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-challenger = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-multilinear = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-tensor = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-sumcheck = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-alloc = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-futures = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-stacked = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
slop-jagged = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }

# SP1
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-hypercube = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-primitives = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-recursion-circuit = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-recursion-machine = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-recursion-executor = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-curves = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-cuda = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1-wip.git", branch = "multilinear_v6" }

# # slop local copy
# slop-air = { path = "../sp1-wip/slop/crates/air" }
# slop-koala-bear = { path = "../sp1-wip/slop/crates/koala-bear" }
# slop-bn254 = { path = "../sp1-wip/slop/crates/bn254" }
# slop-basefold = { path = "../sp1-wip/slop/crates/basefold" }
# slop-basefold-prover = { path = "../sp1-wip/slop/crates/basefold-prover" }
# slop-dft = { path = "../sp1-wip/slop/crates/dft" }
# slop-matrix = { path = "../sp1-wip/slop/crates/matrix" }
# slop-algebra = { path = "../sp1-wip/slop/crates/algebra" }
# slop-symmetric = { path = "../sp1-wip/slop/crates/symmetric" }
# slop-merkle-tree = { path = "../sp1-wip/slop/crates/merkle-tree" }
# slop-poseidon2 = { path = "../sp1-wip/slop/crates/poseidon2" }
# slop-commit = { path = "../sp1-wip/slop/crates/commit" }
# slop-challenger = { path = "../sp1-wip/slop/crates/challenger" }
# slop-multilinear = { path = "../sp1-wip/slop/crates/multilinear" }
# slop-alloc = { path = "../sp1-wip/slop/crates/alloc" }
# slop-tensor = { path = "../sp1-wip/slop/crates/tensor" }
# slop-sumcheck = { path = "../sp1-wip/slop/crates/sumcheck" }
# slop-futures = { path = "../sp1-wip/slop/crates/futures" }
# slop-stacked = { path = "../sp1-wip/slop/crates/stacked" }
# slop-jagged = { path = "../sp1-wip/slop/crates/jagged" }

# # for local development
# sp1-core-executor = { path = "../sp1-wip/crates/core/executor" }
# sp1-core-machine = { path = "../sp1-wip/crates/core/machine" }
# sp1-hypercube = { path = "../sp1-wip/crates/hypercube" }
# sp1-primitives = { path = "../sp1-wip/crates/primitives" }
# sp1-prover = { path = "../sp1-wip/crates/prover" }
# sp1-recursion-circuit = { path = "../sp1-wip/crates/recursion/circuit" }
# sp1-recursion-compiler = { path = "../sp1-wip/crates/recursion/compiler" }
# sp1-recursion-executor = { path = "../sp1-wip/crates/recursion/executor" }
# sp1-recursion-machine = { path = "../sp1-wip/crates/recursion/machine" }
# sp1-curves = { path = "../sp1-wip/crates/curves" }
# sp1-cuda = { path = "../sp1-wip/crates/cuda" }
# sp1-derive = { path = "../sp1-wip/crates/derive" }
# sp1-sdk = { path = "../sp1-wip/crates/sdk" }

# async/concurrency
tokio = { version = "1.42.0" }
futures = "0.3.31"
rayon = "1.10.0"
# misc
tracing = "0.1.40"
thiserror = "1.0"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8"
serial_test = "3.2.0"
cc = { version = "1.0", features = ["parallel"] }
which = "6.0"
cbindgen = "0.27.0"
pathdiff = "0.2.1"
