[package]
name = "csl-baby-bear"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-device = { workspace = true }
csl-sys = { workspace = true }
csl-dft = { workspace = true }
csl-merkle-tree = { workspace = true }

slop-baby-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-poseidon2 = { workspace = true }
slop-symmetric = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-commit = { workspace = true }
slop-challenger = { workspace = true }

lazy_static = "1.5.0"

[dev-dependencies]
rand = "0.8"
slop-dft = { workspace = true }
slop-matrix = { workspace = true }
slop-algebra = { workspace = true }
tokio = { workspace = true }
[lints]
workspace = true
