[package]
name = "slop-basefold-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-algebra = {workspace = true}
slop-multilinear= {workspace = true}
slop-basefold = {workspace = true}
slop-utils = {workspace = true}
p3-challenger = {workspace = true}
p3-dft = {workspace = true}
p3-commit = {workspace = true}
p3-fri = {workspace = true}
p3-matrix = {workspace = true}
p3-util = {workspace = true}
p3-maybe-rayon = {workspace = true}
itertools = "0.12.0"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.10.0"

[dev-dependencies]
p3-baby-bear = {workspace = true}
p3-poseidon2 = {workspace = true}
p3-symmetric = {workspace = true}
p3-merkle-tree = {workspace = true}
