[package]
name = "slop-basefold"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-algebra = { workspace = true }
slop-multilinear = { workspace = true }
slop-maybe-rayon = { workspace = true }
slop-challenger = { workspace = true }
slop-utils = { workspace = true }
slop-commit = { workspace = true }
slop-fri = { workspace = true }
slop-matrix = { workspace = true }
slop-baby-bear = { workspace = true }
slop-symmetric = { workspace = true }
slop-poseidon2 = { workspace = true }
slop-merkle-tree = { workspace = true }
slop-dft = { workspace = true }

thiserror = "1.0"
itertools = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0.207", features = ["derive"] }

[dev-dependencies]
slop-baby-bear = { workspace = true }
