[package]
name = "csl-commit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# cuslop
csl-cuda = { workspace = true }
csl-jagged-assist = { workspace = true }
csl-tracegen = { workspace = true }
csl-utils = { workspace = true }
csl-jagged-tracegen = { workspace = true }
csl-basefold = { workspace = true }
csl-merkle-tree = { workspace = true }

# slop
slop-algebra = { workspace = true }
slop-alloc = { workspace = true }
slop-tensor = { workspace = true }
slop-challenger = { workspace = true }
slop-koala-bear = { workspace = true }
slop-jagged = { workspace = true }
slop-symmetric = { workspace = true }
slop-dft = { workspace = true }

# sp1
sp1-hypercube = { workspace = true }

# misc
itertools = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serial_test = "3.1"
zstd = "0.13.3"
sp1-sdk = { workspace = true  }
sp1-recursion-circuit = { workspace = true }
csl-prover = { workspace = true }
sp1-recursion-compiler = { workspace = true }
slop-stacked = { workspace = true }
sp1-primitives = { workspace = true }
slop-futures = { workspace = true }

[lints]
workspace = true
