[package]
name = "csl-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-sys = { workspace = true }
slop-alloc = { workspace = true }
slop-algebra = { workspace = true }
slop-koala-bear = { workspace = true }
slop-tensor = { workspace = true }
slop-multilinear = { workspace = true }
slop-sumcheck = { workspace = true }
slop-challenger = { workspace = true }
slop-basefold = { workspace = true }
slop-stacked = { workspace = true }
slop-commit = { workspace = true }
slop-jagged = { workspace = true }
slop-futures = { workspace = true }

sp1-hypercube = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
crossbeam = "0.8.4"
pin-project = "1"
futures = "0.3"
itertools = { workspace = true }
tracing = { workspace = true }
[dev-dependencies]
rand = "0.8"


[lints]
workspace = true
