[package]
name = "cuslop-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true }
sp1-cuda = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-prover = { workspace = true, features = ["unsound"] }
sp1-primitives = { workspace = true }
csl-prover = { workspace = true }
csl-cuda = { workspace = true }
sha2 = "0.10.9"
bincode = "1.3.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { workspace = true }
clap = { version = "4.5.38", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }


[lints]
workspace = true
