[package]
name = "csl-device"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
thiserror = { workspace = true }
csl-alloc = { workspace = true }
csl-sys = { workspace = true }
csl-derive = { workspace = true }

slop-baby-bear = { workspace = true }

tokio = { workspace = true, features = ["full"] }
crossbeam = "0.8.4"
pin-project = "1"
futures = "0.3"
arrayvec = "0.7.6"
itertools = "0.14.0"

[dev-dependencies]
rand = "0.8"
