[package]
name = "csl-dft"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-sys = { workspace = true }
csl-device = { workspace = true }

slop-algebra = { workspace = true }

[lints]
workspace = true
