[package]
name = "csl-dft"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
csl-cuda = { workspace = true }

slop-alloc = { workspace = true }
slop-dft = { workspace = true }
slop-algebra = { workspace = true }
slop-tensor = { workspace = true }
slop-koala-bear = { workspace = true }

[dev-dependencies]
rand = "0.8"
tokio = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
